# anki2sqlite

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
src/anki2sqlite/: __init__.py  build.py  cli.py  extract.py  sources.py  transform.py
tests/: conftest.py  test_build.py  test_cli.py  test_extract.py  test_sources.py  test_transform.py
